--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style.css"/>
+    <link rel="stylesheet" href="/src/index.css"/>
     
     <title>Vite + React</title>
   </head>
@@ -14,6 +13,6 @@
     </div>
     <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script type="module" src="/src/script.js"></script>
+  <script type="module" src="/src/index.js"></script>
   </body>
 </html>
