--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="/src/index.css"/>
     <title>Adrian Dumitrascu | A Front-End Developer based in Frankfurt</title>
   </head>
