--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="/src/index.css"/>
-    <title>Adrian Dumitrascu | A Front-End Developer based in Frankfurt</title>
+    <title>Adrian Dumitrascu | A Front-End Developer based in Bucharest</title>
   </head>
   <body>
     <div class="top">
