Add Twitter Card meta tags for improved sharing experience

--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="/src/index.css"/>
-    <title>Adrian Dumitrascu | A Front-End Developer based in Bucharest</title>
+    <title>Adrian Dumitrascu | A Front-End Developer</title>
+    <meta name="description" content="Experienced Front-end Developer in Bucharest, Romania, specializing in React, Next.js, and TypeScript. Skilled in building high-performance web applications and full-stack projects with Node.js, delivering exceptional user experiences.">
+    
+    <!-- Open Graph meta tag for an image -->
+    <meta property="og:title" content="Adrian Dumitrascu | A Front-End Developer">
+    <meta property="og:description" content="Experienced Front-end Developer in Bucharest, Romania, specializing in React, Next.js, and TypeScript. Skilled in building high-performance web applications and full-stack projects with Node.js, delivering exceptional user experiences.">
+    <meta property="og:image" content="https://adriandumitrascu.com/image.jpg">
+    <meta property="og:url" content="https://adriandumitrascu.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card meta tag -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Adrian Dumitrascu | A Front-End Developer">
+    <meta name="twitter:description" content="xperienced Front-end Developer in Bucharest, Romania, specializing in React, Next.js, and TypeScript. Skilled in building high-performance web applications and full-stack projects with Node.js, delivering exceptional user experiences.">
+    <meta name="twitter:image" content="https://adriandumitrascu.com/image.jpg">
   </head>
   <body>
     <div class="top">
